deploy/deploy_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/zentrix566/my-nginx-web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
